# CHIP-8

./: .gitignore  CHIP-8.sln  CMakeLists.txt  LICENSE  README.md  make.bat  make.sh  mybuildnotes.txt  premake.bat  premake.sh  run.bat  run.sh
CHIP-8/: CHIP-8.vcxproj  CHIP-8.vcxproj.filters  c8.c  c8.h  c8_host_win32.c  c8_util.c  main.c
source/: CMakeLists.txt  c8.c  c8.h  c8_fontset.c  c8_host.h  c8_host_sdl2.c  c8_host_win32.c  c8_util.c  c8_util.h  main.c
